Name change to SytheSMP Strength Gem fixes, lots of other logic errors